test: add vercel speed insights

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "blog:dev": "vitepress dev blog",
     "blog:build": "vitepress build blog",
     "blog:preview": "vitepress preview blog"
+  },
+  "dependencies": {
+    "@vercel/speed-insights": "^1.2.0"
   }
 }
